# fdaPDE-core

./: .gitignore
fdaPDE/: isogeometric_analysis.h
fdaPDE/finite_elements/solvers/: fem_solver_base.h  fem_solver_selector.h
fdaPDE/isogeometric_analysis/: iga_assembler.h  iga_symbols.h
fdaPDE/isogeometric_analysis/basis/: nurbs.h  nurbs_basis.h
fdaPDE/isogeometric_analysis/integration/: integrator.h
fdaPDE/isogeometric_analysis/mesh/: mesh.h  parametrization.h
fdaPDE/isogeometric_analysis/operators/: advection.h  diffusion.h  dt.h  laplace_beltrami.h  reaction.h
fdaPDE/isogeometric_analysis/solvers/: iga_linear_elliptic_solver.h  iga_solver_base.h  iga_solver_selector.h
fdaPDE/pde/: differential_operators.h
fdaPDE/splines/: spline_symbols.h
fdaPDE/utils/integration/: integrator.h  integrator_tables.h
simulations/diffusion_advection-ring/: main.cpp
simulations/diffusion_reaction-square/: gnuplot.txt  main.cpp
simulations/laplacian-ring/: main.cpp
simulations/laplacian-ring/data/: ring_cpx_ref0.mtx  (+15 more)
simulations/laplacian-square/: CMakeLists.txt  gnuplot.txt  main.cpp
simulations/laplacian-square/data/: quad_cpx_ref0.mtx  quad_cpx_ref1.mtx  quad_cpx_ref2.mtx  quad_cpx_ref3.mtx  quad_cpy_ref0.mtx  quad_geopde_sol_144.mtx  quad_geopde_sol_324.mtx  quad_geopde_sol_36.mtx  quad_geopde_sol_64.mtx  quad_geopde_times.mtx  quad_ky_ref1.mtx  quad_ky_ref3.mtx  quad_weights_ref0.mtx  quad_weights_ref3.mtx
simulations/laplacian_curlyplate/: main.cpp
simulations/neumann_curlyplate/: gnuplot.txt  main.cpp
test/: main.cpp
test/src/: iga_test.cpp
(+63 files in other folders)
